🐛  Fixed unreadable Unsplash search text in Night Shift mode (#866)
closes https://github.com/TryGhost/Ghost/issues/9030

- don't change the search input's background color when the input has focus in Night Shift

--- a/ghost/admin/app/styles/app-dark.css
+++ b/ghost/admin/app/styles/app-dark.css
@@ -308,6 +308,10 @@ input,
     color: #fff;
 }
 
+.gh-unsplash-search:focus {
+    background-color: color(var(--lightgrey));
+}
+
 .gh-unsplash-zoom {
     background: rgba(0,0,0,0.8);
 }
